// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderDetails should render the button by default 1`] = `
<button>
  <img
    alt="PayPal"
    src="test-file-stub"
  />
</button>
`;

exports[`OrderDetails should render the button with a spinner when processing 1`] = `
<button>
  <span
    className="button-spinner-icon text-primary mr-2"
  />
  <img
    alt="PayPal"
    src="test-file-stub"
  />
</button>
`;
